<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.workers</groupId>
	<artifactId>workers</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>workers</name>
	<url>http://maven.apache.org</url>
	<!-- <pluginRepositories> <pluginRepository> <id>scala-tools.org</id> <name>Scala-tools 
		Maven2 Repository</name> <url>http://scala-tools.org/repo-releases</url> 
		</pluginRepository> </pluginRepositories> <properties> <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> 
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> 
		<app.main.class>com.workers.main.ESMain</app.main.class> <maven.compile.source>1.7</maven.compile.source> 
		<maven.compile.target>1.7</maven.compile.target> <powermock.version>1.3.1</powermock.version> 
		</properties> <build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
		<artifactId>maven-surefire-plugin</artifactId> <configuration> <argLine>-Xmx512m 
		-XX:MaxPermSize=256m</argLine> </configuration> </plugin> <plugin> <groupId>org.scala-tools</groupId> 
		<artifactId>maven-scala-plugin</artifactId> <version>2.15.2</version> <executions> 
		<execution> <goals> <goal>compile</goal> <goal>testCompile</goal> </goals> 
		</execution> </executions> <configuration> <sourceDir>src/main/java</sourceDir> 
		<jvmArgs> <jvmArg>-Xms1g</jvmArg> <jvmArg>-Xmx3g</jvmArg> </jvmArgs> </configuration> 
		</plugin> <plugin> <artifactId>maven-compiler-plugin</artifactId> <version>3.0</version> 
		<configuration> <source>${maven.compile.source}</source> <target>${maven.compile.target}</target> 
		</configuration> </plugin> <plugin> <groupId>org.apache.maven.plugins</groupId> 
		<artifactId>maven-shade-plugin</artifactId> <version>1.7.1</version> <executions> 
		<execution> <phase>package</phase> <goals> <goal>shade</goal> </goals> <configuration> 
		<filters> <filter> <artifact>*:*</artifact> <excludes> <exclude>META-INF/*.SF</exclude> 
		<exclude>META-INF/*.DSA</exclude> <exclude>META-INF/*.RSA</exclude> </excludes> 
		</filter> </filters> </configuration> </execution> </executions> </plugin> 
		</plugins> <finalName>workers</finalName> </build> -->
	<repositories>
		<repository>
			<id>sonatype</id>
			<name>Sonatype Groups</name>
			<url>https://oss.sonatype.org/content/groups/public/</url>
		</repository>
		<!-- <repository> <id>powermock-repo</id> <url>http://powermock.googlecode.com/svn/repo/</url> 
			</repository> -->
	</repositories>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>net.java.dev.jets3t</groupId>
			<artifactId>jets3t</artifactId>
			<version>0.9.2</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>org.elasticsearch</groupId>
			<artifactId>elasticsearch</artifactId>
			<version>1.6.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.2.2</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<version>2.15</version>
		</dependency>
		<dependency>
			<groupId>com.amazonaws</groupId>
			<artifactId>aws-java-sdk</artifactId>
			<version>1.0.002</version>
		</dependency>
		<dependency>
			<groupId>com.datastax.cassandra</groupId>
			<artifactId>cassandra-driver-core</artifactId>
			<version>2.1.2</version>
		</dependency>
		<dependency>
			<groupId>com.utils</groupId>
			<artifactId>utils</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>

		<!-- <dependency> <groupId>org.mockito</groupId> <artifactId>mockito-all</artifactId> 
			<version>1.9.5</version> </dependency> <dependency> <groupId>org.powermock.modules</groupId> 
			<artifactId>powermock-module-junit4</artifactId> <version>${powermock.version}</version> 
			</dependency> <dependency> <groupId>org.powermock.api</groupId> <artifactId>powermock-api-mockito</artifactId> 
			<version>${powermock.version}</version> </dependency> <dependency> <groupId>org.elasticsearch</groupId> 
			<artifactId>elasticsearch-hadoop</artifactId> <version>2.1.0.Beta3</version> 
			</dependency> <dependency> <groupId>org.scala-lang</groupId> <artifactId>scala-library</artifactId> 
			<version>2.10.4</version> <scope>provided</scope> </dependency> <dependency> 
			<groupId>org.apache.spark</groupId> <artifactId>spark-core_2.10</artifactId> 
			<version>1.3.0</version> </dependency> <dependency> <groupId>org.apache.spark</groupId> 
			<artifactId>spark-mllib_2.10</artifactId> <version>1.3.0</version> <scope>provided</scope> 
			</dependency> -->
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-json_2.10</artifactId>
			<version>2.4.0-M2</version>
		</dependency>
		<dependency>
			<groupId>com.typesafe.play</groupId>
			<artifactId>play-iteratees_2.10</artifactId>
			<version>2.4.0-M2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-sql_2.10</artifactId>
			<version>1.3.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-hive_2.10</artifactId>
			<version>1.3.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.api-ads</groupId>
			<artifactId>ads-lib</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>com.google.api-ads</groupId>
			<artifactId>ads-lib</artifactId>
			<version>2.8.0</version>
		</dependency>

		<dependency>
			<groupId>com.google.api-ads</groupId>
			<artifactId>adwords-axis</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>com.google.api-ads</groupId>
			<artifactId>ads-lib</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>com.google.api-ads</groupId>
			<artifactId>dfp-axis</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>org.apache.kafka</groupId>
			<artifactId>kafka_2.10</artifactId>
			<version>0.8.2.1</version>
			<exclusions>
				<exclusion>
					<artifactId>jmxri</artifactId>
					<groupId>com.sun.jmx</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jms</artifactId>
					<groupId>javax.jms</groupId>
				</exclusion>
				<exclusion>
					<artifactId>jmxtools</artifactId>
					<groupId>com.sun.jdmk</groupId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
</project>
